--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi[standard] (>=0.119.0,<0.120.0)"
+    "fastapi[standard] (>=0.115,<1.0)",
+    "sqlalchemy (>=2.0,<3.0)",
+    "aiosqlite (>=0.19,<0.22)"
 ]
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
