--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
             - "8000:8000"
         volumes:
             - .:/app
-        environment:
-            - PYTHONUNBUFFERED=1
+        env_file:
+            - .env
         command: [ "poetry","run","uvicorn","main:app","--host","0.0.0.0","--port","8000" ]
