--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = [
     {name = "ciro rocha", email = "ciroreipersa@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = "^3.12"
 dependencies = [
     "fastapi[standard] (>=0.115,<1.0)",
     "sqlalchemy (>=2.0,<3.0)",
-    "aiosqlite (>=0.19,<0.22)"
+    "aiosqlite (>=0.19,<0.22)",
+    "redis (>=7.1.0,<8.0.0)"
 ]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
