--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MEU_USUARIO=a
 MINHA_SENHA=a
 DATABASE_URL=sqlite:///./livros.db
-PYTHONUNBUFFERED=1
+PYTHONUNBUFFERED=1REDIS_URL=redis://localhost:6379/0
