--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ MEU_USUARIO=a
 MINHA_SENHA=a
 DATABASE_URL=sqlite:///./livros.db
 PYTHONUNBUFFERED=1REDIS_URL=redis://localhost:6379/0
+REDIS_HOST=redis
+REDIS_PORT=6379
