--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,18 @@ services:
         env_file:
             - .env
         command: [ "poetry","run","uvicorn","main:app","--host","0.0.0.0","--port","8000" ]
-        
+            
+    redis:
+        image: docker.io/library/redis:7-alpine
+        container_name: livros-redis
+        ports:
+            - "6379:6379"
+
+    celery:
+        build: .
+        container_name: livros-celery
+        command: ["poetry","run","celery","-A","celery_app:celery_app","worker","-Q","livros","--loglevel=info"]
+        volumes:
+            - .:/app
+        depends_on:
+            - redis
