tentativa de resolver problema sobre dar get nas tesks via FastApi

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DATABASE_URL=sqlite:///./livros.db
 PYTHONUNBUFFERED=1REDIS_URL=redis://localhost:6379/0
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_URL=redis://redis:6379/0
