--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-MEU_USUARIO="a"
-MINHA_SENHA="a"
-DATABASE_URL="sqlite:///./livros.db"
+MEU_USUARIO=a
+MINHA_SENHA=a
+DATABASE_URL=sqlite:///./livros.db
 PYTHONUNBUFFERED=1
 
 REDIS_HOST=redis
