--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,25 +7,12 @@ on:
     branches: [main]
 
 jobs:
-  fastapi-tests:
+  fastapi-docker-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v3
 
-      - name: Instalar Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-
-      - name: Instalar Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Instalar dependências com Poetry
-        run: poetry install --no-root --no-interaction
-
-      - name: Rodar testes
-        run: poetry run pytest
+      - name: Build da imagem Docker
+        run: docker build -t my-fastapi-app .
